# spliit-api-client

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/spliit/: __init__.py  client.py  utils.py
tests/: conftest.py  run_integration_tests.sh  test_client.py  test_integration.py
tests/docker/: compose.yaml  container.env
