[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spliit"
version = "0.1.0"
authors = [
  { name="Max Pol", email="your.email@example.com" },
]
description = "Python client for Spliit expense sharing app"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]